a name links are no longer hidden by the toolbar

--- a/roomlist/static/css/style.css
+++ b/roomlist/static/css/style.css
@@ -4,6 +4,9 @@ html,
 body {
   height: 95%;
 }
+a[name] {
+  padding-top: 55px;
+}
 #contentcontain {
   padding-top: 45px;
   display: inline-block;
